# simple-histogram

./: CMakeLists.txt  README.md  aacdec.cpp  aacdec.h  aacreader.cpp  aacreader.h  adts.cpp  adts.h  aplayer.cpp  aplayer.h  coords.cpp  coords.h  histogram.cpp  histogram.h  main.cpp
decoder/aac/: decoder.cpp  decoder.h
faad/: common.h
samples/: toystory.aac
